# Snake-Game

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run_config_test.py  run_config_tests.py
docs/superpowers/plans/: 2026-04-16-cyberpunk-snake-game.md
docs/superpowers/specs/: 2026-04-12-snake-game-cyberpunk-design.md
snake_game/: config.py  game_logic.py  game_ui.py  leaderboard.py  main.py  particle_system.py  powerup_system.py  sound_manager.py
tests/: test_config.py  test_game_logic.py  test_leaderboard.py  test_particle_system.py  test_powerup_system.py
